# Text2Map

./: .gitignore  README.md  docker-compose.yml  startup.bat  startup.sh
.github/workflows/: main.yml
backend/: Dockerfile  main.py  pyproject.toml  requirements.txt
backend/jsonFiles/: countries.json
backend/routers/: askchat.py  imageSearch.py
boot_utilities/: config.bat
docs/: FutureImporvemnts.md  Pipeline_Setup.md  Text2Map_PA.md
docs/backend/: FileStructure.md  ScriptBuild.md
docs/frontend/: FileStructure.md  ScriptBuild.md
frontend/: .eslintrc.json  Dockerfile  next.config.js  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/askChat/: page.tsx
frontend/app/textsource/: page.tsx
frontend/components/component/: askingView.tsx  edit-marker.tsx  info-panel.tsx  infoPanel.tsx  inputDisplay.tsx  mapComponent.tsx  mapPinMarker.tsx  markerEditor.tsx  markerList.tsx  startChatGPt.tsx  startDataSourceInput.tsx  toolbar.tsx
frontend/components/functions/: ApiUtils.ts  AutosizeTextArea.ts  CoordinateExtractor.ts  Coordinates.tsx  EntitiesConvertor.ts  JsonRenderer.tsx  entityNameListExtractor.ts  markerEditUpdater.ts  markerToggle.ts
frontend/components/types/: BackendResponse.ts  CoordinateEntity.ts  JsonChatHistory.ts  MapMarker.ts
frontend/components/ui/: FormModal.tsx  bbl.tsx  button.tsx  card.tsx  icons.tsx  input.tsx  logo.tsx  markdown.tsx  navbar.tsx  scroll-area.tsx  textarea.tsx  toolbar.tsx  upload.tsx
frontend/components/ui/customCss/: bbl.css
(+1 files in other folders)
