[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "text2mapAPI"
version = "0.10.0-dev"
requires-python = ">=3.6"
dependencies = [
    "fastapi",
    "mapbox",
    "Geocoder",
    "openai",
    "spacy",
    "aiohttp",
    "pexels-api",
    "pycountry",
    "shapely",
    "uvicorn[standard]",
    "geopy",
    "python-dotenv",
    "poppler-utils"
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: FastAPI"
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]
